[fix] layout issues

--- a/src/landing/styles.css
+++ b/src/landing/styles.css
@@ -313,7 +313,8 @@
     align-items: center;
     gap: 40px;
     height: 100vh;
-    padding-top: 124px;
+    padding-top: 74px;
+    background-color: #e9f6ff;
   }
 
   .hero-image,
@@ -342,6 +343,10 @@
     margin-top: 34px;
   }
 
+  .features-section {
+    margin-top: 0px;
+  }
+
   .features-section > h2 {
     font-size: 38px;
     margin: 0px;
@@ -359,6 +364,10 @@
     margin-top: 44px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+  }
+
+  .pricing-section {
+    margin-top: 0px;
   }
 
   .pricing-section > h2 {
